@@ -122,6 +122,7 @@ krb5_get_realm_domain(context, realm, domain)
 	    return retval;
 	realm = realmlist[0];
     }
+    krb5_find_config_files();
     if ((trans_file = fopen(krb5_trans_file, "r")) == (FILE *) 0) {
 	if (realmlist != NULL) {
 	    krb5_xfree(realmlist[0]);
@@ -132,12 +133,12 @@ krb5_get_realm_domain(context, realm, domain)
     (void) sprintf(scanstring, "%%%ds %%%ds",
 		   sizeof(trans_host)-1,sizeof(trans_realm)-1);
     while (1) {
-#ifdef _WINDOWS
+        #ifdef _WINDOWS
             scanval = read_2str (trans_file, trans_host, sizeof(trans_host)-1,
                 trans_realm, sizeof(trans_realm)-1);
-#else
+        #else
             scanval = fscanf(trans_file, scanstring, trans_host, trans_realm);
-#endif
+        #endif
 	if (scanval != 2) {
 	    if (scanval == EOF) {
 		fclose(trans_file);
